--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       # - "4571:4571"
       # - "8080:8080"
     environment:
-      - SERVICES=s3,lambda,logs #s3
+      - SERVICES=s3,lambda,apigateway,logs #s3
       - DATA_DIR=/tmp/localstack/data
       - DEFAULT_REGION=ap-northeast-1
       - USER=root
@@ -17,11 +17,12 @@ services:
     volumes:
       - ./localstack:/tmp/localstack
     networks:
-      - container-link
+      default:
+      app_network:
 
 volumes:
   localstack:
 
 networks:
-  container-link:
-    name: localstack.internal
+  app_network:
+    external: true
